# stratalyzer

./: .gitignore  pyproject.toml
api/: main.py
docs/plans/: 2026-03-11-stratalyzer.md  2026-03-11-three-format-engine.md  2026-03-14-positioning-first-pipeline.md  2026-03-14-quality-gated-pipeline.md
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: LoadingStep.tsx  Sidebar.tsx  StepInput.tsx  StepResult.tsx
frontend/src/lib/: api.ts
src/stratalyzer/: cli.py  extractor.py  method_analyzer.py  method_merger.py  models.py  scanner.py  scriptgen.py  summarizer.py  synthesizer.py  transcriber.py  vision.py  youtube_miner.py
tests/: test_extractor.py  test_method_analyzer.py  test_method_merger.py  test_models.py  test_pipeline_api.py  test_scanner.py  test_summarizer.py  test_synthesizer.py  test_transcriber.py  test_vision.py
