[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stratalyzer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "anthropic>=0.40",
    "openai-whisper>=20240930",
    "pillow>=10.0",
]

[project.scripts]
stratalyzer = "stratalyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
